# Hexapod_Brain

./: .gitignore  AGENTS.md  HANDOVER_TO_BRAIN.md  README.md  environment.yml
.github/: copilot-instructions.md
docu/: hexapod_vision_projekt.md
memory/: MEMORY.md  TODO.md  TOOLS.md
scripts/: export_yolo_tflite.py
src/hexapod_navigation/: README.md  package.xml  setup.cfg  setup.py
src/hexapod_navigation/config/: bottle_seeker_params.yaml
src/hexapod_navigation/hexapod_navigation/: bottle_seeker.py
src/hexapod_navigation/launch/: bottle_seeker.launch.py
src/hexapod_vision/: README_TFLITE.md  package.xml  setup.cfg  setup.py
src/hexapod_vision/hexapod_vision/: yolo_detector.py  yolo_detector_tflite.py
src/hexapod_vision/launch/: yolo_detector.launch.py  yolo_detector_tflite.launch.py
yolov8n_saved_model/: metadata.yaml
